refactor: 전체조회 리팩터링